Fix DraftWidgetButton text center alignment. #184

--- a/app/scripts/Widget/plugins/DraftWidget/draft-widget-button.scss
+++ b/app/scripts/Widget/plugins/DraftWidget/draft-widget-button.scss
@@ -10,6 +10,7 @@
     font-weight: 600;
     height: 100px;
     transition: .3s;
+    position: relative;
 
     &:hover {
       background-color: rgba(255,255,255,.02);
@@ -22,6 +23,16 @@
       i.fa {
         font-size: 2rem;
         margin-bottom: .5rem;
+        position: relative;
+        top: -6px;
+      }
+
+      .text {
+        position: absolute;
+        width: 64px;
+        bottom: -10px;
+        left: 50%;
+        margin-left: -32px;
       }
     }
   }
